# rtype

./: CMakeLists.txt  README.md  clean.sh  rtype.sh  server.sh
client/include/: AGame.hpp  Core.hpp  ESprite.hpp  Entity.hpp  IGraphic.hpp  IWindow.hpp  Renderer.hpp  Rtype.hpp  SfmlGraphic.hpp  SfmlWindow.hpp  Sprite.hpp  SpriteManager.hpp  SpritesPool.hpp  TextureManager.hpp
client/src/: Core.cpp  Entity.cpp  Rtype.cpp  SfmlGraphic.cpp  SfmlWindow.cpp  Sprite.cpp  main.cpp
common/: Position.cpp  Position.hpp
src/client/: main.cpp
